# about-me-bot-website

./: .gitignore  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
backend/: api.py  cli.py  config.py
data/: bm25_grid_search.json  chunks.json  evaluation_questions.jsonl  live_evaluation_questions.jsonl  profile_facts.json  qa_pairs.jsonl  unanswerable_questions.jsonl
deploy/: README.md  com.jamchat.backend.plist.template
docs/: CHATBOT_ARCHITECTURE.md  DATA_PIPELINE_RECONSTRUCTION.md  DEPLOYMENT.md  DETAILED_RAG_CRITICAL_REVIEW.md  IA_DEVELOPMENT_LOG.md  MAC_CODEX_CONTEXT.md  MAC_DEPLOYMENT_RUNBOOK.md  WINDOWS_TRAINING_RUNBOOK.md  hermes-extraction-prompt-pass3.md  hermes-extraction-prompt.md  security_best_practices_report.md  workbuddy-extraction-prompt.md
hermes_output/: UNCERTAIN.md  _extraction_manifest.md  _pass3_manifest.md  achievements.md  bio.md  contact.md  education.md  gaming.md  hobbies.md  pass3_achievements.md  pass3_collab.md  pass3_daily.md  pass3_favorites.md  pass3_future.md  pass3_languages.md  pass3_projects.md  pass3_school.md  pass3_sports.md  pass3_tech.md  pass3_uncertain.md  photo_video.md  projects_skills.md  sports.md  subjective.md  suggested_qa_pairs.md  travel.md  writing.md
kb_extra/: achievements.md  apex_rank.md  bio.md  contact.md  education.md  favorites.md  gaming.md  hobbies.md  personality.md  projects_skills.md  sports.md  travel.md  writing.md
scripts/: evaluate_live_chat.py  export_content.mjs  process_new_photography.py  validate_profile_facts.py
src/: App.tsx  main.tsx
(+58 files in other folders)
