[project]
name = "james-site"
version = "0.1.0"
description = "James Sui's personal site + AI chatbot (IB CS HL IA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

